[gd_scene load_steps=34 format=2]

[ext_resource path="res://Animation/Player/Normal/SuperAdaptorBlue.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Animation/Player/Shoot/SuperAdaptorBlue.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scripts/Player/Rockman.gd" type="Script" id=19]
[ext_resource path="res://Sprites/HUD/Life-4.png" type="Texture" id=26]
[ext_resource path="res://Scripts/Player/Animation.gd" type="Script" id=61]
[ext_resource path="res://Sprites/Effects/Line1.png" type="Texture" id=93]
[ext_resource path="res://Fonts/Pixel12x10.ttf" type="DynamicFontData" id=124]
[ext_resource path="res://Scripts/Player/HUD.gd" type="Script" id=127]
[ext_resource path="res://Sprites/HUD/Life-1.png" type="Texture" id=128]
[ext_resource path="res://Sprites/HUD/Life-2.png" type="Texture" id=129]
[ext_resource path="res://Sprites/HUD/Life-0.png" type="Texture" id=130]
[ext_resource path="res://Sprites/HUD/Life-3.png" type="Texture" id=131]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 1;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier );
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Shader" id=23]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 1;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier );
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=24]
shader = SubResource( 23 )
shader_param/flash_color = Color( 1, 0, 0, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0, 0.206452, 0.795775, 1 )
colors = PoolColorArray( 0.364706, 0.372549, 0, 0, 0.188012, 0.125336, 0.289063, 1, 1, 1, 1, 1, 0.996078, 1, 0.894118, 0 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )
width = 100

[sub_resource type="ParticlesMaterial" id=22]
emission_shape = 5
emission_ring_radius = 20.0
emission_ring_inner_radius = 20.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_align_y = true
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -200.0
color_ramp = SubResource( 21 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.69231, 10.5593 )

[sub_resource type="RayShape2D" id=4]
length = 8.79854

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.923, 8.58029 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8.46154, 10.8459 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 130 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 131 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 124 )

[sub_resource type="Animation" id=28]
resource_name = "Alert"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/ShootSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.271, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/ShootSprite:material:shader_param/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Charge_1"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/NormalSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/NormalSprite:material:shader_param/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "None"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/NormalSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/NormalSprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/NormalSprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animation/NormalSprite:material:shader_param/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Animation/ShootSprite:material:shader_param/flash_modifier")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Animation/ShootSprite:material:shader_param/flash_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Super_charge"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/NormalSprite:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.992157, 0.215686, 0.156863, 1 ), Color( 0.992157, 0.215686, 0.156863, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/NormalSprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=29]
resource_name = "Alert"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/ShootSprite:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/ShootSprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.4, 0.0 ]
}

[sub_resource type="Animation" id=30]
resource_name = "None"
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/ShootSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/ShootSprite:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animation/ShootSprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Rockman" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 19 )

[node name="Animation" type="Node2D" parent="."]
position = Vector2( 0, -0.769231 )
script = ExtResource( 61 )

[node name="NormalSprite" type="AnimatedSprite" parent="Animation"]
material = SubResource( 10 )
position = Vector2( 0, -5 )
frames = ExtResource( 1 )
animation = "Run"

[node name="ShootSprite" type="AnimatedSprite" parent="Animation"]
visible = false
material = SubResource( 24 )
position = Vector2( -1, -5 )
frames = ExtResource( 2 )
animation = "Die"

[node name="ChargeParticles" type="Particles2D" parent="Animation"]
position = Vector2( 0, 3.46154 )
emitting = false
amount = 20
lifetime = 0.35
process_material = SubResource( 22 )
texture = ExtResource( 93 )

[node name="BodyColision" type="CollisionShape2D" parent="."]
position = Vector2( 1.83399e-07, -1.74844 )
shape = SubResource( 3 )

[node name="FeetCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.98515 )
scale = Vector2( 4.04339, 1 )
shape = SubResource( 4 )

[node name="DashCollision" type="CollisionShape2D" parent="."]
position = Vector2( 6.23556e-05, 4.50337 )
shape = SubResource( 5 )
disabled = true

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2( 0, -7.15387 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.23
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[node name="Charged1" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="areatest" type="Area2D" parent="." groups=["Player"]]
position = Vector2( 0, -5.38466 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="areatest"]
position = Vector2( -5.04347e-07, 3.15363 )
shape = SubResource( 6 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 127 )

[node name="Lifebar" type="AnimatedSprite" parent="HUD"]
position = Vector2( 40, -18 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 7 )

[node name="Label" type="Label" parent="HUD"]
margin_left = 44.0
margin_top = 105.0
margin_right = 84.0
margin_bottom = 121.0
rect_scale = Vector2( 0.793744, 0.766754 )
custom_fonts/font = SubResource( 8 )
text = "1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
playback_speed = 6.0
anims/Alert = SubResource( 28 )
anims/Charge_1 = SubResource( 11 )
anims/None = SubResource( 13 )
anims/RESET = SubResource( 12 )
anims/Super_charge = SubResource( 15 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
playback_speed = 6.0
anims/Alert = SubResource( 29 )
anims/None = SubResource( 30 )
anims/RESET = SubResource( 31 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[connection signal="animation_finished" from="Animation/NormalSprite" to="." method="_on_NormalSprite_animation_finished"]
[connection signal="animation_finished" from="Animation/ShootSprite" to="." method="_on_ShootSprite_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="Charged1" to="." method="_on_Charged1_timeout"]
[connection signal="area_entered" from="areatest" to="." method="_on_areatest_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
